# wne-msc-thesis-new

./: .gitignore  5m_gmadl_replication_plan.md  CLAUDE.md  ENHANCED_EVALUATION_IMPLEMENTATION.md  INTERACTIVE_PREDICTIONS_FEATURE.md  PHASE1_DIAGNOSTIC_SUMMARY.md  README.md  check_missing_data.py  complete_evaluation_run.py  diagnostic_parameter_comparison.py  enhanced_evaluation_1821_trades.py  enhanced_parameter_diagnostic.py  fixed_evaluation_run.py  generate_notebook_cache.py  my_runs.csv  original_runs.csv  phase1_diagnostic_report.py  pyproject.toml  research_paper.md  run_tmux_strategy_validation.py  verify_notebook_reproduction.py
analysis/demo_gmadl_interactive_20250623_053155_5m_20250623_053156/: demo_gmadl_interactive_20250623_053155_5m_20250623_drawdown_analysis.csv  demo_gmadl_interactive_20250623_053155_5m_20250623_equity_curve.csv  demo_gmadl_interactive_20250623_053155_5m_20250623_performance_detailed.csv  evaluation_summary.json
analysis/gmadl_informer_complete_all_strategies_3bps_5m_20250619_204832/: evaluation_summary.json  gmadl_informer_complete_all_strategies_3bps_5m_20250619_performance_detailed.csv
notebooks/: btcusdt_15m_evaluation.ipynb  btcusdt_1m_evaluation.ipynb  btcusdt_30m_evaluation.ipynb  btcusdt_5m_evaluation.ipynb  btcusdt_5m_evaluation_clean.ipynb  btcusdt_dataset.ipynb  evaluate.ipynb  gmadl.ipynb  sensitivity_analysis.ipynb
results/: btcusdt_5m_evaluation_summary.md  btcusdt_5m_optimal_parameters.csv  btcusdt_5m_strategy_performance.csv  btcusdt_5m_window_performance.csv
scripts/: train.py
src/informer/: README.md  decoder.py  (+5 more)
(+94 files in other folders)
