[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/informer",
    "src/ml",
    "src/strategy"
]

[project]
name = "wnemsc"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytorch-forecasting==1.0.0",
    "plotly==5.22.0",
    "wandb==0.17.7",
    "TA-lib==0.4.32",
    "numpy==1.26.4"
]

[tool.pytest.ini_options]
addopts = "--capture=no"
filterwarnings = [
    "ignore::DeprecationWarning"
]